# dl_oreilly

./: pyproject.toml
dl_oreilly/: __init__.py  backward_helper.py  backward_helper_test.py  bandit.py  bandit_test.py  config.py  dataloaders.py  datasets.py  datasets_test.py  function.py  function_test.py  grad_test.py  graph.py  graph_tst.py  grid_world.py  grid_world_test.py  layers.py  layers_test.py  models.py  optimizers.py  protocol.py  simple_classification_test.py  simple_network_test.py  test_comparable_function.py  test_grad.py  test_graph.py  transforms.py  variable.py  variable_test.py  vgg16_test.py
